--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-XlsxWriter==1.1.8
+xlsxwriter==1.1.8
 numpy==1.15.4
 pandas==0.23.4
 openpyxl==2.6.2
 tensorflow==1.12.0
+tensorflow-gpu==1.14.0
 matplotlib==3.0.2
 scipy==1.1.0
 progressbar33==2.4
-scikit_learn>=0.20.2
+scikit_learn==0.24.0
